# mybevy

./: .gitattributes  .gitignore  CLAUDE.md  README.md
project/: Cargo.toml  build.rs
project/assets/audio/: README.md  audio_manifest.ron
project/assets/fangyuan/: README.md  home_preview.ron  home_preview.ron.bk
project/assets/fangyuan/avatars/: minimal_player.ron
project/assets/fangyuan/layouts/: home_layout.ron
project/assets/fangyuan/palettes/: home_prefabs.ron
project/assets/game/: scenes.csv
project/assets/licenses/: kaykit_adventurers_license.txt  kaykit_dungeon_remastered_license.txt
project/assets/scenes/fangyuan_home/: layout.ron  scene.ron
project/assets/scenes/lockstep_sim_arena/: layout.ron  scene.ron
project/assets/scenes/robot_sync_arena/: layout.ron  scene.ron
project/assets/scenes/sample_dungeon_room/: layout.ron  scene.ron
project/assets/ui/fixtures/: LICENSES.md  manifest.ron
project/assets/ui/fonts/: README.md
project/assets/ui/i18n/: en_us.ron  zh_cn.ron
project/assets/ui/icons/: README.md  manifest.ron
project/assets/ui/themes/: default.ron
project/src/: lib.rs  lockstep_sim_headless.rs  main.rs
project/src/authority/: mod.rs  plugin.rs  types.rs
project/src/config/: window.rs
project/src/framework/: mod.rs  prelude.rs
project/src/framework/audio/: bank.rs  battle.rs  catalog.rs  catalog_config.rs  command.rs  debug.rs  event.rs  id.rs  lifecycle.rs  loading.rs  metadata.rs  mixer.rs  mod.rs  music.rs  playback.rs  plugin.rs  prelude.rs  scene.rs  scope.rs  spatial.rs  ui.rs
project/src/framework/fangyuan/: asset_path.rs  audit.rs  avatar.rs  bake.rs  blueprint.rs  cache.rs  cache_authority.rs  chunk.rs  chunk_loading.rs  debug_metrics.rs  debug_report.rs  epoch_inheritance.rs  equipment.rs  fallback.rs  identity.rs  layout.rs  lod.rs  lod_integration.rs  material_profile.rs  mod.rs  npc.rs  object.rs  object_budget.rs  prefab.rs  pressure.rs  primitive.rs  render_assets.rs  skill.rs  static_instance.rs  static_instance_render.rs  static_merge.rs  static_mesh_builder.rs  stats.rs  streaming_update.rs  tiandao.rs  vfx.rs  visual_replay.rs
project/src/framework/fight/: mod.rs
project/src/framework/network/: http.rs  kcp.rs  mod.rs  runtime.rs  tcp.rs  types.rs
project/src/framework/scene/: authority.rs  camera.rs  command.rs  debug.rs  event.rs  id.rs  lifecycle.rs  loading.rs  (+9 more)
project/src/game/: audio.rs  audio_dev_samples.rs  mod.rs  plugin.rs  ui_ids.rs
project/src/myserver/: mod.rs  plugin.rs  protocol.rs  types.rs
project/src/network/: mod.rs
tools/ui-generation/: Cargo.toml
tools/ui-generation/assets/: ui_asset_catalog.v1.json
tools/ui-generation/fixtures/: README.md  preprocess.options.json  task.valid.json
tools/ui-generation/src/: analysis.rs  asset_strategy.rs  audit.rs  boundary.rs  ci_security.rs  closed_loop_apply.rs  closed_loop_fix_plan.rs  closed_loop_generation.rs  contract.rs  credentials.rs  directory.rs  evaluation.rs  generation.rs  lib.rs  lifecycle.rs  main.rs  observability.rs  offline.rs  operations.rs  planning.rs  preprocess.rs  preview.rs  promotion.rs  provider_budget.rs  repair.rs  run_manifest.rs  series.rs  workspace.rs
tools/ui-visual-audit/: Cargo.toml  README.md
tools/ui-visual-audit/src/: ai.rs  baseline.rs  comparison.rs  gate.rs  lib.rs  main.rs  metrics.rs  normalization.rs  reference_manifest.rs  regions.rs  report.rs  semantic.rs
tools/ui-visual-audit/tests/: ai_cli_contract.rs  cli_contract.rs  gate_cli_contract.rs  golden_contract.rs  metrics_cli_contract.rs  metrics_golden.rs  normalization_golden.rs  regions_contract.rs  report_baseline_cli.rs  semantic_cli_contract.rs  semantic_golden.rs
(+355 files in other folders)
