[package]
name = "project"
version = "0.1.0"
edition = "2024"

[lib]
name = "project"
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy = "0.18.1"
authority-core = { path = "../../MyServer/packages/authority-core" }
prost = "0.14"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio_kcp = "0.9.8"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
