[package]
name = "project"
version = "0.1.0"
edition = "2024"

[lib]
name = "project"
crate-type = ["rlib"]

[dependencies]
bevy = { version = "0.18.1", features = ["wav"] }
authority-core = { path = "../../MyServer/packages/authority-core" }
csv = "1"
prost = "0.14"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
ron = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sim-core = { path = "../../MyServer/packages/sim-core" }
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio_kcp = "0.9.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.6"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
