[package]
name = "ui-generation"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
jsonschema = { version = "0.47", default-features = false }
project = { path = "../../project" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
