[package]
name = "ui-visual-audit"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aho-corasick = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ui-generation = { path = "../ui-generation", default-features = false, features = ["provider-core"] }
ureq = { version = "2.12", features = ["json"] }
url = "2"

[dev-dependencies]
tempfile = "3"
